# Androbench

.metals/: metals.mv.db
AndroBench16/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
AndroBench16/app/: build.gradle.kts
AndroBench16/app/src/main/cpp/: CMakeLists.txt  androbench_jni.c
Images/: Androbench_Intro.psd  Androbench_Intro_part.psd  Benchmarking.ai  Go_Bench.ai  Graph.ai  History.ai  Icon_StartingBench.ai  Icon_StartingBench.psd  Rank_back.psd  Setting.ai  androbench_tab_set.psd  btn.psd  btn_click.psd  btn_ranking.psd  btn_start.psd  csl_logo.ai  icon.psd  icon_list.psd  icon_notice.psd  line.ai  logo.psd  mark_csl.ai  rank_background.psd  title.psd
androbench_cmd/: Makefile  default.conf  interface_JNI.c  jni.c  jni.h  main.c
release/3.4/: .project  bash.exe.stackdump  sh.exe.stackdump
release/3.4/assets/: browser_facebook.script  camera_movie.script  camera_photo.script
release/3.4/jni/: Android.mk  Interface_JNI.c
release/3.5/: .project
release/3.5/jni/: Android.mk  Interface_JNI.c
release/3.6/: .project  AndroidManifest.xml
release/3.6/.externalToolBuilders/: NDK Builder.launch
release/3.6/assets/: browser_ebay.script
release/3.6/jni/: Interface_JNI.c
release/4.0/: .project  AndroidManifest.xml
release/4.0.1/: .project  AndroidManifest.xml
release/4.0.1/assets/: browser_amazon.script
release/4.0.1/jni/: Application.mk
release/4.0/assets/: market.script  readme.txt
release/4.0/jni/: Interface_JNI.c
release/4.1/: .project  AndroidManifest.xml
ssl_key/: how_to_create_key
(+106 files in other folders)
